[gd_scene load_steps=64 format=3 uid="uid://d1dos1pj2a5u7"]

[ext_resource type="Script" path="res://scripts/knight/battle/playersurv.gd" id="1_asygj"]
[ext_resource type="Texture2D" uid="uid://brt1ojusaosml" path="res://assets/sprites/knight/ATTACK 1.png" id="1_dsfha"]
[ext_resource type="Texture2D" uid="uid://rxdruf3uj15h" path="res://assets/sprites/knight/DEATH.png" id="2_dqp0p"]
[ext_resource type="Texture2D" uid="uid://dilbgtmfs7wb6" path="res://assets/sprites/knight/IDLE.png" id="3_gwbkg"]
[ext_resource type="Texture2D" uid="uid://c8agxl72apd4a" path="res://assets/sprites/knight/ATTACK 2.png" id="3_kaq8g"]
[ext_resource type="Texture2D" uid="uid://c5u321hqieiya" path="res://assets/sprites/knight/ATTACK 3.png" id="4_aabvq"]
[ext_resource type="Texture2D" uid="uid://bp427b164ju5n" path="res://assets/sprites/knight/JUMP.png" id="4_eooxp"]
[ext_resource type="Texture2D" uid="uid://ccruk7xjsste3" path="res://assets/sprites/knight/RUN.png" id="5_t6ubr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dk382"]
atlas = ExtResource("1_dsfha")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_31vlf"]
atlas = ExtResource("1_dsfha")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptfde"]
atlas = ExtResource("1_dsfha")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwohc"]
atlas = ExtResource("1_dsfha")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsfcd"]
atlas = ExtResource("1_dsfha")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa7gp"]
atlas = ExtResource("1_dsfha")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkpb1"]
atlas = ExtResource("3_kaq8g")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwnvy"]
atlas = ExtResource("3_kaq8g")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q3hq"]
atlas = ExtResource("3_kaq8g")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyt3b"]
atlas = ExtResource("3_kaq8g")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfqyx"]
atlas = ExtResource("3_kaq8g")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3u3p"]
atlas = ExtResource("4_aabvq")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eighg"]
atlas = ExtResource("4_aabvq")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_83q5a"]
atlas = ExtResource("4_aabvq")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyieo"]
atlas = ExtResource("4_aabvq")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi16q"]
atlas = ExtResource("4_aabvq")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1enbo"]
atlas = ExtResource("4_aabvq")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjq7v"]
atlas = ExtResource("2_dqp0p")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpt3j"]
atlas = ExtResource("2_dqp0p")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv7u3"]
atlas = ExtResource("2_dqp0p")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_m48wy"]
atlas = ExtResource("2_dqp0p")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2eb6"]
atlas = ExtResource("2_dqp0p")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_rljpy"]
atlas = ExtResource("2_dqp0p")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i1vg"]
atlas = ExtResource("2_dqp0p")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8m4k"]
atlas = ExtResource("2_dqp0p")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mfoi"]
atlas = ExtResource("2_dqp0p")
region = Rect2(768, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_77u04"]
atlas = ExtResource("2_dqp0p")
region = Rect2(864, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw7fj"]
atlas = ExtResource("2_dqp0p")
region = Rect2(960, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfn31"]
atlas = ExtResource("2_dqp0p")
region = Rect2(1056, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnyeh"]
atlas = ExtResource("3_gwbkg")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd4k8"]
atlas = ExtResource("3_gwbkg")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbcns"]
atlas = ExtResource("3_gwbkg")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxook"]
atlas = ExtResource("3_gwbkg")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7vjs"]
atlas = ExtResource("3_gwbkg")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nyep"]
atlas = ExtResource("3_gwbkg")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ruf"]
atlas = ExtResource("3_gwbkg")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5dff"]
atlas = ExtResource("4_eooxp")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l54r"]
atlas = ExtResource("4_eooxp")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3o8a"]
atlas = ExtResource("4_eooxp")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_05ji6"]
atlas = ExtResource("4_eooxp")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmkvf"]
atlas = ExtResource("4_eooxp")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3pjh"]
atlas = ExtResource("5_t6ubr")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_15hk5"]
atlas = ExtResource("5_t6ubr")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_kplmp"]
atlas = ExtResource("5_t6ubr")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_t285p"]
atlas = ExtResource("5_t6ubr")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeakr"]
atlas = ExtResource("5_t6ubr")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kurd"]
atlas = ExtResource("5_t6ubr")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jor6"]
atlas = ExtResource("5_t6ubr")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj3s3"]
atlas = ExtResource("5_t6ubr")
region = Rect2(672, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_3hwxu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk382")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31vlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptfde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwohc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsfcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa7gp")
}],
"loop": false,
"name": &"attack1",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkpb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwnvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q3hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyt3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfqyx")
}],
"loop": false,
"name": &"attack2",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3u3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eighg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83q5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyieo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi16q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1enbo")
}],
"loop": false,
"name": &"attack3",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjq7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpt3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv7u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m48wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2eb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rljpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i1vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8m4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mfoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77u04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw7fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfn31")
}],
"loop": false,
"name": &"death",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnyeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd4k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbcns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxook")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7vjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nyep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81ruf")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5dff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l54r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3o8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05ji6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmkvf")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3pjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15hk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kplmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t285p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeakr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kurd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jor6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj3s3")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o861m"]
radius = 6.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edy5x"]
size = Vector2(22, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldo4o"]
size = Vector2(38.25, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbvd5"]
size = Vector2(20, 35.25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ij0rh"]
radius = 11.0
height = 34.0

[node name="playersurv" type="CharacterBody2D" groups=["playerr"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_asygj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -19)
sprite_frames = SubResource("SpriteFrames_3hwxu")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_o861m")

[node name="attack1" type="Area2D" parent="." groups=["sword1"]]
position = Vector2(0, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack1"]
position = Vector2(18, 5.5)
shape = SubResource("RectangleShape2D_edy5x")
disabled = true

[node name="cooldown1" type="Timer" parent="attack1"]

[node name="attack2" type="Area2D" parent="." groups=["sword2"]]
position = Vector2(0, -19)

[node name="cooldown2" type="Timer" parent="attack2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack2"]
position = Vector2(7.125, 7)
shape = SubResource("RectangleShape2D_ldo4o")
disabled = true

[node name="attack3" type="Area2D" parent="." groups=["sword3"]]
position = Vector2(0, -38)

[node name="cooldown3" type="Timer" parent="attack3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack3"]
position = Vector2(18, 20)
shape = SubResource("RectangleShape2D_gbvd5")
disabled = true

[node name="playerbody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerbody"]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_ij0rh")

[node name="boar_timer" type="Timer" parent="."]

[node name="bee_timer" type="Timer" parent="."]

[node name="snail_timer" type="Timer" parent="."]

[node name="damagetimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1277
limit_bottom = 718
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="regen" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="attack1/cooldown1" to="." method="_on_cooldown_1_timeout"]
[connection signal="timeout" from="attack2/cooldown2" to="." method="_on_cooldown_2_timeout"]
[connection signal="timeout" from="attack3/cooldown3" to="." method="_on_cooldown_3_timeout"]
[connection signal="area_entered" from="playerbody" to="." method="_on_playerbody_area_entered"]
[connection signal="area_exited" from="playerbody" to="." method="_on_playerbody_area_exited"]
[connection signal="timeout" from="boar_timer" to="." method="_on_boar_timer_timeout"]
[connection signal="timeout" from="bee_timer" to="." method="_on_bee_timer_timeout"]
[connection signal="timeout" from="snail_timer" to="." method="_on_snail_timer_timeout"]
[connection signal="timeout" from="damagetimer" to="." method="_on_damagetimer_timeout"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
